# adventofcode2020

day1/report_repair/: Cargo.toml
day1/report_repair/src/: lib.rs
day1/report_repair2/src/: lib.rs
day10/joltage/src/: lib.rs
day10/joltage2/src/: lib.rs
day11/ferry/: Cargo.toml
day11/ferry/src/: lib.rs  seating.rs
day11/ferry2/src/: lib.rs  main.rs  seating.rs
day12/risk_of_rain/: Cargo.toml
day12/risk_of_rain/src/: main.rs  ship.rs
day12/risk_of_rain2/src/: instructions.rs  lib.rs  ship.rs
day13/shuttle/src/: lib.rs
day13/shuttle2/data/: example.txt  example2.txt  input.txt
day13/shuttle2/src/: lib.rs  schedule.rs
day14/mask/: Cargo.toml
day14/mask/src/: lib.rs  program.rs
day14/mask2/src/: program.rs
day15/memory_game/src/: config.rs  game.rs  lib.rs
day16/train_ticket/src/: document.rs  lib.rs  notes.rs  parser.rs  (+1 more)
day16/train_ticket2/: Cargo.toml
day16/train_ticket2/src/: lib.rs  main.rs  notes.rs  parser.rs
day19/sea_monster/: Cargo.toml
day2/password_validation2/: Cargo.toml
day20/jigsaw/: Cargo.toml
day21/allergens/: Cargo.toml
day22/crab_battle/: Cargo.toml
day23/crab_cups/: Cargo.toml
day23/crab_cups2/: Cargo.toml
day24/tiles/: Cargo.toml
day25/combo_breaker/: Cargo.toml
day3/toboggan2/: Cargo.toml
day4/passport/: Cargo.toml
day4/passport2/: Cargo.toml
day5/boarding_pass2/: Cargo.toml
day6/customs2/: Cargo.toml
day7/luggage2/: Cargo.toml
day8/handheld2/: Cargo.toml
day9/xmas2/: Cargo.toml
puzzle-1-2-report-repair/src/: lib.rs
template/: Cargo.toml
template/src/: lib.rs  main.rs
(+79 files in other folders)
