[package]
name = "train_ticket"
version = "0.1.0"
authors = ["Scott Baldwin <sbaldwin621@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
nom = { version = "6.0.1", features = ["regexp", "alloc"] }